<resources>
    <string name="app_name">HandsomeRunner</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="user_name">User name</string>
    <string name="submit">SUBMIT</string>
    <string name="sign_up">Don\'t have an account? Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="activity_level">Activity Level:</string>
    <string name="height_in_inches">Height in Inches</string>
    <string name="weight_in_pounds">Weight in Pounds</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home_activity">HomeActivity</string>
    <string name="calorie_goal">Calorie Goal</string>
    <string name="steps">Steps</string>
    <string name="nearby">NearBy</string>
    <string name="setting">Setting</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">\u3000\u3000This app is created by Sam, and it can help you to be more healthy. Whether you want to lose weight or put on weight. we will make an efficient plan for you with advanced algorithms. </string>
    <string name="history">history</string>
    <string name="edit">EDIT</string>
    <string name="set_steps">Set Steps</string>
    <string name="calculate">Calculate</string>
    <string name="add">ADD</string>
    <string name="food_detail">Food Detail</string>
    <string name="food_item">food items</string>
    <string name="login">Login</string>
    <string name="no_login">no login</string>
</resources>
