<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/calorie_goal"
            android:icon="@drawable/icon_calorie_goal"
            android:title="@string/calorie_goal" />
        <item
            android:id="@+id/steps"
            android:icon="@drawable/icon_steps"
            android:title="@string/steps" />
        <item
            android:id="@+id/nearby"
            android:icon="@drawable/icon_nearby"
            android:title="@string/nearby" />
        <item
            android:id="@+id/setting"
            android:icon="@drawable/icon_setting"
            android:title="@string/setting" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/icon_share"
                android:title="Share" />
        </menu>
    </item>

</menu>
